# RUST_file_synchronization_tool

./: Cargo.toml  README.md
src/: cli.rs  main.rs
