[package]
name = "file-synchronization"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"
crossbeam-channel = "0.5.15"
filetime = "0.2.25"
hyper = "1.6.0"
indicatif = "0.17.11"
log = "0.4.27"
md5 = "0.7.0"
notify = "8.0.0"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.2"
tungstenite = "0.26.2"
walkdir = "2.5.0"
